--- a/index.html
+++ b/index.html
@@ -43,6 +43,34 @@
             </div>
         </div>
 
+        <h2>il tuo biglietto</h2>
+
+
+        <h3>dettagli passeggeri</h3>
+
+        <div id="biglietto">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Nome passeggerio</th>
+                        <th>Offerta</th>
+                        <th>Carrozza</th>
+                        <th>Codice CP</th>
+                        <th>Costo Biglietto</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td id="nomepasseggiero"></td>
+                        <td id="offerta"></td>
+                        <td id="carozza"></td>
+                        <td id="codice"></td>
+                        <td id="costo"></td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
         
     </div>
     
