--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <option value="vuoto"> </option>
                         <option value="minorenne">minorenne</option>
                         <option value="maggiorenne">maggiorenne</option>
-                        <option value="under65">under65</option>
+                        <option value="over65">over65</option>
                     </select>
                 </div>
     
@@ -61,7 +61,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td id="nomepasseggiero"></td>
+                        <td id="nomepasseggero"></td>
                         <td id="offerta"></td>
                         <td id="carozza"></td>
                         <td id="codice"></td>
